spacing fixes

--- a/src/profileview/profilestyle.css
+++ b/src/profileview/profilestyle.css
@@ -58,8 +58,8 @@
 }
 
 .user-statistic .user-banner .ant-card-meta .ant-avatar-image {
-    width: 180px;
-    height: 180px;
+    width: 176px;
+    height: 176px;
     border: 2px solid var(--white);
 }
 
